# fluent

./: CMakeLists.txt  README.md
fluent/: Makefile  README.md  install.bat  install.sh
fluent/include/: fluent.hpp
fluent/src/: core.cpp  exec.cpp  fileio.cpp  io.cpp  main.cpp  system.cpp  value.cpp  vars.cpp
src/: control.cpp  exec.cpp  vars.cpp
